# graspe

./: .gitignore  README.md  TODO  enviroment.yml
docker/: Dockerfile.roshumble
docker/script/: build.sh  exec.sh
docker/scripts/: exec.sh
docs/: get_started.md  index.md
docs/gc/: gazebo_ros2_control.md
docs/wiki/: docker.md  get_started.md  home.md  peter_corke_simulation.md
peter_corke/: environment.yml  main.py  test.py
peter_corke/scripts/: graspeClass.py
ros_ws/install/Montagem_description/share/Montagem_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/graspe_description/share/graspe_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/log/: latest_build
ros_ws/src/graspe_common/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/graspe_common/srv/: forward_kinematics.srv  inverse_kinematics.srv
ros_ws/src/graspe_controller/: CMakeLists.txt  package.xml
ros_ws/src/graspe_controller/config/: graspe_controllers.yaml
ros_ws/src/graspe_controller/launch/: controler.launch.py  controller.launch.py
ros_ws/src/graspe_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/graspe_description/config/: display.rviz
ros_ws/src/graspe_description/launch/: display.launch.py  gazebo.launch.py  general.launch.py  robot_display.launch.py
ros_ws/src/graspe_description/meshes/: base_link.stl  fixed_link_1.stl  prismatic3.stl  revolution2_link_1.stl  rot2.stl  rot4.stl  rot5.stl  slider_link_1.stl
ros_ws/src/graspe_description/rviz/: display_config.rviz
ros_ws/src/graspe_description/urdf/: graspe.gazebo  graspe.trans  graspe.xacro  graspe_gazebo_control.xacro  graspe_joints_limits.xacro  materials.xacro  robot.urdf
ros_ws/src/graspeurdf_description/: package.xml  setup.cfg  setup.py
ros_ws/src/graspeurdf_description/urdf/: graspeurdf.gazebo  graspeurdf.xacro  graspeurdf_ros2_control.xacro
ros_ws/src/montagem_description/: setup.cfg  setup.py
ros_ws/src/montagem_description/meshes/: endfactor_1.stl  linkgrande_1.stl  rotacionalpequeno_1.stl
ros_ws/src/montagem_description/urdf/: montagem.xacro
(+33 files in other folders)
